--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,14 @@
+body {
+  margin: 0;
+  background-color: #2d2d2d;
+}
+
 .App {
   text-align: center;
 }
 
 .App-Header {
-  background-color: #282c34;
+  background-color: #393939;
   color: white;
   display: flex;
   flex-direction: column;
@@ -12,15 +17,18 @@
 }
 
 .App-Body {
-  background-color: #282c34;
+  background-color: #2d2d2d;
   color: white;
+  max-width: 52rem;
+  margin-left: auto;
+  margin-right: auto;
   display: flex;
   flex-direction: column;
   min-height: 85vh;
 }
 
 .App-Footer {
-  background-color:  #282c34;
+  background-color:  #393939;
   color: white;
   height: 10vh;
 }
